# QuickLaunch

./: .gitignore  BUILD_POLICY.md  LICENSE  ProcurementLibrary.cs  README.md  ShortcutDeck.csproj  library.json  main.js  make-icon.ps1  messages.json  package-lock.json  package.json  preload.js
.github/workflows/: release.yml
legacy-csharp/: ActionRunner.cs  AppStorage.cs  DeckTileControl.cs  IconCatalog.cs  MainForm.cs  Models.cs  Program.cs  README.md  UiUtil.cs
patches/: fix-shortcut-drag-and-drop.patch
src/: admin-config.example.js  icons.js  index.html  library.js  renderer.js  styles.css  tauri-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
